# llvm-pass-plugin-playground

./: .gitignore  CMakeLists.txt  README.md  cmake-config.sh
include/: LoopIndVarBound.h
lib/: CMakeLists.txt  LoopIndVarBound.cpp
